--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,7 +5,4 @@
   - name: i want to install webserver on  ansible nodes
     apt:
       name: apache2 
-      state: present 
-
-      
-    
+      state: absent
