--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -4,24 +4,24 @@
   tasks:
   - name: i want to install webserver on  ansible nodes
     apt:
-      name: apache2 
+      name: "{{mywebpackonubuntu}}" 
       state: present
     when: ansible_os_family =="Debian"
 
   - name: i want to start webserver on ansible nodes
     service:
-       name: apache2
+       name: "{{mywebpackonubuntu}}"
        state: started
     when: ansible_os_family =="Debian"
 
   - name: i want to install webserver on RedHat
     dnf:
-      name: httpd
+      name: "{{mywebpackonredhat}}"
       state: present
     when: ansible_os_family=="RedHat"
 
   - name: i want to start webserver on RedHat
     service:
-      name: httpd
+      name: "{{mywebpackonredhat}}"
       state: started
     when: ansible_os_family =="RedHat"
