--- a/mydebug.yml
+++ b/mydebug.yml
@@ -4,3 +4,7 @@
   tasks:
   - name: i want to executeeeeee  direct linux command
     command: hostname -f
+    register: myfirsttaskresult
+    
+  - name: i want to display first task result
+    debug: "{{myfirsttaskresult}}"
