--- a/mydebug.yml
+++ b/mydebug.yml
@@ -7,4 +7,8 @@
     register: myfirsttaskresult
     
   - name: i want to display first task result
-    debug: "{{myfirsttaskresult}}"
+    debug: 
+        msg: "{{myfirsttaskresult}}"
+
+
+  
