--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -7,3 +7,8 @@
     apt:
       name: apache2
       state: present
+  - name: copy static file into node side
+    copy:
+      src: mystaticfile
+      dest: /home/ubuntu/mystaticfile
+
